work on build system

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,11 +2,19 @@
 .buildpath
 .project
 .settings
-.vscode
+/.vscode
+/.github
+/.git
 /vendor
-/ci
 /node_modules
 /.env.local
+/.env.local.php
+/.env.*.local
 /config/ldap_ou_team_mapping.yml
-/var/
+/var
+/public/build/*
 core
+/sql/unittest/*
+/tests
+/bin/*
+!/bin/console
