--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,11 +10,11 @@ on:
   schedule:
     - cron: '44 12 * * *'
   push:
-    branches: [ master ]
+    branches: [ main, v4 ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ master ]
+    branches: [ main, v4 ]
 
 env:
   # Use docker.io for Docker Hub if empty
