--- a/compose.yml
+++ b/compose.yml
@@ -6,11 +6,11 @@ services:
       context: .
       dockerfile: Dockerfile
       target: production
-    image: ghcr.io/netresearch/timetracker:v4
+    image: ghcr.io/netresearch/timetracker
     volumes:
-      - app-pub:/var/www/html/web
-      - app-cache:/var/www/html/app/cache
-      - app-logs:/var/www/html/app/logs
+      - app-pub:/var/www/html/public
+      - app-cache:/var/www/html/var/cache
+      - app-logs:/var/www/html/var/log
     links:
       - db:db
     restart: always
@@ -22,11 +22,13 @@ services:
   httpd:
     image: nginx:alpine
     volumes:
-      - app-pub:/var/www/html/web
+      - app-pub:/var/www/html/public
       - ./nginx-conf.d-default.conf:/etc/nginx/conf.d/default.conf
     links:
       - app:phpfpm
     restart: always
+    ports:
+      - 8765:80
 
   db:
     image: mariadb
