--- a/config/packages/test/webpack_encore.yaml
+++ b/config/packages/test/webpack_encore.yaml
@@ -1,2 +1,5 @@
 webpack_encore:
+    output_path: '%kernel.project_dir%/public/build'
+    script_attributes:
+        defer: true
     strict_mode: false
