--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
     "require-dev": {
         "dms/phpunit-arraysubset-asserts": "^0.5.0",
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^2.0",
         "symfony/browser-kit": "^4.4",
         "symfony/debug-bundle": "^4.4",
         "symfony/maker-bundle": "^1.39",
