--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 /core
 /sql/unittest/001_testtables.sql
 /README.html
+/compose.override.yml
+/tt_dump.sql
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
