--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,4 @@ DATABASE_URL="mysql://unittest:unittest@db_unittest:3306/unittest?serverVersion=
 ###< doctrine/doctrine-bundle ###
 
 APP_LOCALE="de"
+APP_TITLE="Netresearch TimeTracker"
