--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,99 @@
 {
-    "cSpell.words": [
-        "Kante",
-        "Timetracker"
-    ]
+  "cSpell.words": [
+    "Kante",
+    "Timetracker"
+  ],
+  "editor.formatOnSave": true,
+  "[php]": {
+    "editor.defaultFormatter": "junstyle.php-cs-fixer"
+  },
+  "php-cs-fixer.executablePathMap": {
+    "php": "docker compose run --rm app php"
+  },
+  "php-cs-fixer.executablePath": "",
+  "php-cs-fixer.config": ".php-cs-fixer.dist.php",
+  "php-cs-fixer.onsave": true,
+  "php-cs-fixer.allowRisky": true,
+  "php.validate.enable": false,
+  "php.suggest.basic": false,
+  "intelephense.environment.phpVersion": "8.2.0",
+  "php.executablePath": "docker compose run --rm app php",
+  "extensions.recommendations": [
+    "junstyle.php-cs-fixer",
+    "bmewburn.vscode-intelephense-client",
+    "mehedidracula.php-namespace-resolver",
+    "neilbrayfield.php-docblocker",
+    "recca0120.vscode-phpunit",
+    "ms-azuretools.vscode-docker",
+    "eamodio.gitlens",
+    "editorconfig.editorconfig",
+    "mikestead.dotenv",
+    "ikappas.phpcs",
+    "devsense.composer-php-vscode"
+  ],
+  "php.intelephense.stubs": [
+    "apache",
+    "bcmath",
+    "bz2",
+    "calendar",
+    "Core",
+    "curl",
+    "date",
+    "dba",
+    "dom",
+    "enchant",
+    "fileinfo",
+    "filter",
+    "fpm",
+    "ftp",
+    "gd",
+    "gettext",
+    "hash",
+    "iconv",
+    "intl",
+    "json",
+    "ldap",
+    "libxml",
+    "mbstring",
+    "mysqli",
+    "mysqlnd",
+    "oci8",
+    "odbc",
+    "openssl",
+    "pcntl",
+    "pcre",
+    "PDO",
+    "pdo_mysql",
+    "pdo_pgsql",
+    "pdo_sqlite",
+    "pgsql",
+    "Phar",
+    "posix",
+    "pspell",
+    "readline",
+    "Reflection",
+    "session",
+    "shmop",
+    "SimpleXML",
+    "snmp",
+    "soap",
+    "sockets",
+    "sodium",
+    "SPL",
+    "sqlite3",
+    "standard",
+    "superglobals",
+    "sysvmsg",
+    "sysvsem",
+    "sysvshm",
+    "tidy",
+    "tokenizer",
+    "xml",
+    "xmlreader",
+    "xmlrpc",
+    "xmlwriter",
+    "xsl",
+    "zip",
+    "zlib"
+  ]
 }
