--- a/composer.json
+++ b/composer.json
@@ -1,89 +1,108 @@
 {
-    "name": "netresearch/timetracker",
-    "license": "AGPL-3.0-only",
-    "type": "project",
-    "description": "",
-    "config": {
-        "bin-dir": "bin",
-        "platform": {
-            "php": "8.2"
-        },
-        "sort-packages": true,
-        "allow-plugins": {
-            "composer/package-versions-deprecated": true,
-            "ocramius/package-versions": true,
-            "php-http/discovery": true,
-            "symfony/flex": true
-        }
+  "name": "netresearch/timetracker",
+  "license": "AGPL-3.0-only",
+  "type": "project",
+  "description": "",
+  "config": {
+    "bin-dir": "bin",
+    "platform": {
+      "php": "8.2"
     },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-      "psr-4": {"Tests\\": "tests/"}
-    },
-    "require": {
-        "php": "~8.2",
-        "ext-date": "*",
-        "ext-json": "*",
-        "ext-ldap": "*",
-        "ext-pcre": "*",
-        "ext-pdo": "*",
-        "ext-reflection": "*",
-        "doctrine/annotations": "^1.14",
-        "doctrine/doctrine-bundle": "^2.0",
-        "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.20",
-        "doctrine/persistence": "^2.0",
-        "guzzlehttp/guzzle": "^7.3",
-        "guzzlehttp/oauth-subscriber": "^0.8",
-        "laminas/laminas-ldap": "^2.19",
-        "phpoffice/phpspreadsheet": "^1.4",
-        "sentry/sentry-symfony": "^4.2",
-        "symfony/asset": "^4.4",
-        "symfony/console": "^4.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/flex": "^1.19",
-        "symfony/form": "^4.4",
-        "symfony/framework-bundle": "^4.4",
-        "symfony/mailer": "^4.4",
-        "symfony/monolog-bundle": "^3.1.0",
-        "symfony/security-bundle": "^4.4",
-        "symfony/translation": "^4.4",
-        "symfony/twig-bundle": "^4.4",
-        "symfony/validator": "^4.4",
-        "symfony/yaml": "^4.4",
-        "twig/twig": "^2.12|^3.0"
-    },
-    "require-dev": {
-        "dms/phpunit-arraysubset-asserts": "^0.5.0",
-        "phpunit/phpunit": "^9.5",
-        "rector/rector": "^2.0",
-        "symfony/browser-kit": "^4.4",
-        "symfony/debug-bundle": "^4.4",
-        "symfony/maker-bundle": "^1.39",
-        "symfony/web-profiler-bundle": "^4.4",
-        "symfony/webpack-encore-bundle": "^1.0"
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "4.4.*"
-        },
-        "branch-alias": null
+    "sort-packages": true,
+    "allow-plugins": {
+      "composer/package-versions-deprecated": true,
+      "ocramius/package-versions": true,
+      "php-http/discovery": true,
+      "symfony/flex": true
     }
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "require": {
+    "php": "~8.2",
+    "ext-date": "*",
+    "ext-json": "*",
+    "ext-ldap": "*",
+    "ext-pcre": "*",
+    "ext-pdo": "*",
+    "ext-reflection": "*",
+    "doctrine/annotations": "^1.14",
+    "doctrine/doctrine-bundle": "^2.0",
+    "doctrine/doctrine-migrations-bundle": "^3.0",
+    "doctrine/orm": "^2.20",
+    "doctrine/persistence": "^2.0",
+    "guzzlehttp/guzzle": "^7.3",
+    "guzzlehttp/oauth-subscriber": "^0.8",
+    "laminas/laminas-ldap": "^2.19",
+    "phpoffice/phpspreadsheet": "^1.4",
+    "sentry/sentry-symfony": "^4.2",
+    "symfony/asset": "^4.4",
+    "symfony/console": "^4.4",
+    "symfony/dotenv": "^4.4",
+    "symfony/flex": "^1.19",
+    "symfony/form": "^4.4",
+    "symfony/framework-bundle": "^4.4",
+    "symfony/mailer": "^4.4",
+    "symfony/monolog-bundle": "^3.1.0",
+    "symfony/security-bundle": "^4.4",
+    "symfony/translation": "^4.4",
+    "symfony/twig-bundle": "^4.4",
+    "symfony/validator": "^4.4",
+    "symfony/yaml": "^4.4",
+    "twig/twig": "^2.12|^3.0"
+  },
+  "require-dev": {
+    "dbrekelmans/bdi": "^1.4",
+    "dms/phpunit-arraysubset-asserts": "^0.5.0",
+    "friendsofphp/php-cs-fixer": "^2.19",
+    "phpstan/phpstan": "^1.12",
+    "phpstan/phpstan-doctrine": "^1.3",
+    "phpstan/phpstan-symfony": "^1.3",
+    "phpunit/phpunit": "^9.5",
+    "psalm/plugin-symfony": "^4.0",
+    "rector/rector": "^1.2",
+    "squizlabs/php_codesniffer": "^3.7",
+    "symfony/browser-kit": "^4.4",
+    "symfony/debug-bundle": "^4.4",
+    "symfony/maker-bundle": "^1.39",
+    "symfony/web-profiler-bundle": "^4.4",
+    "symfony/webpack-encore-bundle": "^1.0",
+    "vimeo/psalm": "^4.30"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ],
+    "cs-check": "phpcs",
+    "cs-fix": "php-cs-fixer fix",
+    "analyze": "phpstan analyze",
+    "psalm": "psalm",
+    "test": "phpunit",
+    "security-check": "echo 'Running security check with Local PHP Security Checker'; curl -o security-checker.phar -s https://github.com/fabpot/local-php-security-checker/releases/download/v2.0.6/local-php-security-checker_2.0.6_linux_amd64 && chmod +x security-checker.phar && ./security-checker.phar && rm security-checker.phar",
+    "check:all": "phpstan analyze && psalm && phpcs",
+    "test:all": "phpunit && phpunit --coverage-html coverage",
+    "fix:all": "php-cs-fixer fix && rector run"
+  },
+  "extra": {
+    "symfony": {
+      "allow-contrib": false,
+      "require": "4.4.*"
+    },
+    "branch-alias": null
+  }
 }
