chore(tests): improve tests

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,6 +23,19 @@ security:
             anonymous: true
             provider: app_user_provider
 
+            # Add form_login configuration
+            form_login:
+                login_path: _login
+                check_path: login_check
+                default_target_path: /
+                username_parameter: _username
+                password_parameter: _password
+                csrf_token_generator: security.csrf.token_manager
+                # Specify the login form template
+                failure_path_parameter: _failure_path
+                # Use a post_only parameter to secure the login form
+                post_only: true
+
             # Custom authenticator for LDAP login
             guard:
                 authenticators:
@@ -51,6 +64,7 @@ security:
     # Access control settings
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/css, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/js, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/images, roles: IS_AUTHENTICATED_ANONYMOUSLY }
