--- a/composer.json
+++ b/composer.json
@@ -96,7 +96,7 @@
     "security-check": "echo 'Running security check with Local PHP Security Checker'; curl -o security-checker.phar -s https://github.com/fabpot/local-php-security-checker/releases/download/v2.0.6/local-php-security-checker_2.0.6_linux_amd64 && chmod +x security-checker.phar && ./security-checker.phar && rm security-checker.phar",
     "check:all": "phpstan analyze && psalm && phpcs",
     "test:all": "phpunit && phpunit --coverage-html coverage",
-    "fix:all": "php-cs-fixer fix && rector run"
+    "fix:all": "psalm --alter --issues=all && php-cs-fixer fix src && rector process src"
   },
   "extra": {
     "symfony": {
