fix test environment configuration

--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,10 @@ DATABASE_URL="mysql://unittest:unittest@db_unittest:3306/unittest?serverVersion=
 ###< doctrine/doctrine-bundle ###
 
 APP_LOCALE="de"
+
+KERNEL_CLASS="App\Kernel"
+SHELL_VERBOSITY="-1"
+
+APP_DEBUG="false"
+SYMFONY_PHPUNIT_REMOVE=""
+SYMFONY_PHPUNIT_VERSION="9.6"
