--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.6/phpunit.xsd"
-    bootstrap="vendor/autoload.php"
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+    bootstrap="tests/bootstrap.php"
+    colors="true"
+    convertErrorsToExceptions="true"
+    convertNoticesToExceptions="true"
+    convertWarningsToExceptions="true"
+    stopOnFailure="false"
     executionOrder="depends,defects"
     forceCoversAnnotation="false"
     beStrictAboutCoversAnnotation="false"
@@ -10,16 +15,7 @@
     beStrictAboutTodoAnnotatedTests="true"
     beStrictAboutChangesToGlobalState="true"
     verbose="true"
-    colors="true">
-    <testsuites>
-        <testsuite name="unit">
-            <directory>tests</directory>
-            <exclude>tests/Controller</exclude>
-        </testsuite>
-        <testsuite name="controller">
-            <directory>tests/Controller</directory>
-        </testsuite>
-    </testsuites>
+    >
     <coverage processUncoveredFiles="true">
         <include>
             <directory suffix=".php">src</directory>
@@ -32,14 +28,13 @@
             <text outputFile="php://stdout" showUncoveredFiles="true" showOnlySummary="false"/>
         </report>
     </coverage>
-    <php>
-        <server name="APP_ENV" value="test" />
-        <server name="KERNEL_CLASS" value="App\Kernel" />
-        <server name="APP_DEBUG" value="false" />
-        <server name="APP_SECRET" value="s$cretf0rt3st" />
-        <server name="DATABASE_URL" value="mysql://root:@timetracker-db:3306/timetracker_test?serverVersion=5.7" />
-        <server name="SHELL_VERBOSITY" value="-1" />
-        <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
-        <server name="SYMFONY_PHPUNIT_VERSION" value="9.6" />
-    </php>
+    <testsuites>
+        <testsuite name="unit">
+            <directory>tests</directory>
+            <exclude>tests/Controller</exclude>
+        </testsuite>
+        <testsuite name="controller">
+            <directory>tests/Controller</directory>
+        </testsuite>
+    </testsuites>
 </phpunit>
