--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
     "symfony/twig-bundle": "^4.4",
     "symfony/validator": "^4.4",
     "symfony/yaml": "^4.4",
-    "twig/twig": "^2.12|^3.0"
+    "twig/twig": "<3.9"
   },
   "require-dev": {
     "brianium/paratest": "*",
