--- a/composer.json
+++ b/composer.json
@@ -70,8 +70,11 @@
     "psalm/plugin-symfony": "^4.0",
     "rector/rector": "^1.2",
     "squizlabs/php_codesniffer": "^3.7",
+    "symfony/browser-kit": "4.4.*",
+    "symfony/css-selector": "4.4.*",
     "symfony/debug-bundle": "^4.4",
     "symfony/maker-bundle": "^1.39",
+    "symfony/phpunit-bridge": "^7.2",
     "symfony/web-profiler-bundle": "^4.4",
     "symfony/webpack-encore-bundle": "^1.0",
     "vimeo/psalm": "^4.30"
