fix(test): Make DefaultController date tests idempotent
Introduces a clock abstraction to decouple date-sensitive tests in
DefaultControllerTest from the actual system time. The tests
`testGetDataActionDefaultParameter` and `testGetDataActionForParameter`
were previously flaky, producing different results depending on the day
of the week (especially Monday) due to hardcoded date logic in
EntryRepository and dynamic dates (CURDATE()) in fixtures.

Changes include:
- Added ClockInterface, SystemClock, and TestClock services.
- Refactored EntryRepository methods (getCalendarDaysByWorkDays,
  getEntriesByUser, findByRecentDaysOfUser, getWorkByUser) to depend
  on ClockInterface and use prepared statements for date comparisons.
- Configured dependency injection in services.yaml (using alias) and
  services_test.yaml (aliasing ClockInterface to TestClock).
- Updated DefaultControllerTest to retrieve and control TestClock in setUp.
- Refactored testGetDataActionForParameter to use a @dataProvider for
  testing different days (Monday vs. Tuesday).
- Replaced assertJsonStructure with a loop checking essential keys due to
  subset assertion issues.
- Modified 002_testdata.sql to use fixed dates instead of CURDATE() for
  relevant entries.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,13 +34,8 @@ services:
     # Makes classes in src/ available to be used as services
     # This creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
-            - '../src/Migrations/'
-            - '../src/Tests/'
+        resource: '../src/*'
+        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
 
     # Controllers are tagged automatically
     App\Controller\:
@@ -66,3 +61,13 @@ services:
     App\Services\Export:
         public: true
         autowire: true
+
+    # Add this: Configure ClockInterface and SystemClock
+    App\\Service\\ClockInterface:
+        alias: App\\Service\\SystemClock
+
+    # Explicitly define EntryRepository if autowiring isn't picking up ClockInterface correctly (optional, usually not needed)
+    # App\\Repository\\EntryRepository:
+    #     arguments:
+    #         $managerRegistry: '@doctrine' # Adjust based on actual ManagerRegistry service ID if needed
+    #         $clock: '@App\\Service\\ClockInterface'
