--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
   "require-dev": {
     "brianium/paratest": "*",
     "dms/phpunit-arraysubset-asserts": "^0.5.0",
-    "friendsofphp/php-cs-fixer": "^2.19",
+    "php-cs-fixer/shim": "^3.75",
     "phpstan/phpstan": "^1.12",
     "phpstan/phpstan-doctrine": "^1.3",
     "phpstan/phpstan-symfony": "^1.3",
