TIM-123: Add new route get single entry by id: /tracking/entry/{id}

--- a/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
+++ b/src/Netresearch/TimeTrackerBundle/Resources/config/routing.yml
@@ -42,6 +42,11 @@ interpretation_all_entries:
     path:  /interpretation/allEntries
     defaults: { _controller: NetresearchTimeTrackerBundle:Interpretation:getAllEntries }
 
+timetracking_get:
+    path: /tracking/entry/{id}
+    defaults: { _controller: NetresearchTimeTrackerBundle:Crud:get }
+    requirements: { id: \d+}
+
 timetracking_save:
     path: /tracking/save
     defaults: { _controller: NetresearchTimeTrackerBundle:Crud:save }
