--- a/web/api.yml
+++ b/web/api.yml
@@ -1882,6 +1882,111 @@ paths:
                 type: object
                 $ref: '#/components/schemas/TicketSystem'
 
+  /tracking/entry/{id}:
+    get:
+      summary: get an entry by id
+      tags:
+        - Entries
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: The id of the entry
+          schema:
+            type: integer
+            example: 1
+      responses:
+        '500':
+          description: Error
+        '401':
+          description: Error Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnauthorizedResponse'
+        '403':
+          description: Error
+          content:
+           application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: You are not allowed to view this entry.
+        '404':
+          description: Error
+          content:
+           application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: No entry for id.
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      date:
+                        type: string
+                        format: date
+                        example: "2000-01-30"
+                      start:
+                        type: string
+                        format: time
+                        example: "08:00"
+                      end:
+                        type: string
+                        format: time
+                        example: "10:40"
+                      description:
+                        type: string
+                        example: "Backen"
+                      ticket:
+                        type: string
+                        example: "FG-33"
+                      duration:
+                        type: integer
+                        description: The duration in minutes
+                        example: 160
+                      durationString:
+                        type: string
+                        description: The duration in string format (hh:mm)
+                        example: "02:40"
+                      extTicket:
+                        type: string
+                        description: String of the orginal jira key
+                        example: ""
+                      user_id:
+                        type: integer
+                        example: 2
+                      project_id:
+                        type: integer
+                        example: 12
+                        nullable: true
+                      customer_id:
+                        type: integer
+                        example: 1
+                      activity_id:
+                        type: integer
+                        example: 1
+                        nullable: true
+                        description: Activity record ID, see /getActivities
+                      worklog_id:
+                        type: integer
+                        nullable: true
+                        description: ID of Jira work log entry
+                        example: null
+
   /tracking/save:
     post:
       summary: Create an entry
