--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
-            "ocramius/package-versions": true
+            "ocramius/package-versions": true,
+            "php-http/discovery": true
         }
     },
     "autoload": {
@@ -48,7 +49,7 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
-        "twig/extensions": "1.5.*@dev",
+        "twig/extensions": "1.0.*@dev",
         "twig/twig": "^1.0||^2.0",
         "zendframework/zend-ldap": "*"
     },
