--- a/config/services.yaml
+++ b/config/services.yaml
@@ -57,8 +57,8 @@ services:
     Psr\Log\LoggerInterface:
         public: true
 
-    # Export service with alias
-    App\Services\Export:
+    # Export service with alias (migrated from App\Services\Export)
+    App\Service\ExportService:
         public: true
         autowire: true
 
