test(perf): speed up suite (filter coverage, DBAL transactions), unskip external-API routes, implement holiday DB tests; inject SubticketSyncService; add JiraOAuthApiFactory for mocking

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -62,6 +62,11 @@ services:
         public: true
         autowire: true
 
+    # Jira API factory for easier mocking in tests
+    App\Service\Integration\Jira\JiraOAuthApiFactory:
+        public: true
+        autowire: true
+
     # Add this: Configure ClockInterface and SystemClock
     App\\Service\\ClockInterface:
         alias: App\\Service\\SystemClock
