refactor(services): introduce JiraOAuthApiFactory and LdapClientService; inject via @required in controllers/services; add LocalizationService and wire controllers; enable controller annotations loader; keep legacy routes for StatusController for 4.4 compatibility

--- a/config/legacy_bundle/routing.yml
+++ b/config/legacy_bundle/routing.yml
@@ -146,6 +146,7 @@ _controllingExport:
       billable: 0
     requirements: { year: \d+, userid: \d+}
 
+## migrated to attribute routes in StatusController
 check_status:
     path: /status/check
     defaults: { _controller: App\Controller\StatusController::checkAction }
