--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -19,3 +19,8 @@ _logout:
 # TimeTracker routes - Load from the legacy bundle config for backward compatibility
 timetracker:
     resource: "./legacy_bundle/routing.yml"
+
+# Enable attribute routes for controllers
+controllers:
+    resource: '../src/Controller/'
+    type: annotation
