feat(routing): add attribute routes for Admin, Default, Crud, Interpretation, Controlling controllers; keep legacy YAML for BC while tests remain green

--- a/config/legacy_bundle/routing.yml
+++ b/config/legacy_bundle/routing.yml
@@ -203,9 +203,7 @@ deletePreset:
     path: /preset/delete
     defaults: { _controller: App\Controller\AdminController::deletePresetAction }
 
-saveSettings:
-    path: /settings/save
-    defaults: { _controller: App\Controller\SettingsController::saveAction }
+## migrated to attribute route in SettingsController::saveAction
 
 saveActivity:
     path: /activity/save
