test: add unit tests for SystemClock, Error response, Ticket, UserTicketsystem; improve baseline coverage without external deps; keep YAML routes

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ phpstan.neon
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
 ###< php-cs-fixer/shim ###
+
+# ChunkHound config files
+.chunkhound.json
+*.chunkhound.json
+chunkhound.json
