--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
         "@babel/core": "^7.25.0",
         "@babel/preset-env": "^7.25.0",
         "@hotwired/stimulus": "^3.2.2",
-        "@symfony/stimulus-bridge": "^4.0.0",
+        "@symfony/stimulus-bridge": "^3.2.3",
         "@symfony/webpack-encore": "^4.7.0",
         "core-js": "^3.37.1",
         "file-loader": "^6.2.0",
         "regenerator-runtime": "^0.14.1",
         "sass": "^1.77.8",
-        "sass-loader": "^16.0.5",
+        "sass-embedded": "^1.77.8",
+        "sass-loader": "^14.2.1",
         "webpack": "^5.92.0",
         "webpack-cli": "^5.1.4",
         "webpack-notifier": "^1.15.0"
