docs: restore historical Symfony steps; target 7.3; update plans
- Set current baseline to Symfony 6.4 and target 7.3
- Restore 4.4→5.4→6.4 as completed in PLANNING.md
- Update PROJECT-GOAL.md incremental path and PHP 8.4 target
- Update AGENT.md to Symfony 6.4 and attributes routing
- Modernize comments in config/routes.yaml
- Rewrite TASKS.md 1.2/1.3 to be state-aware for 6.4→7.3
- Remove meta labels (NEW/Updated/Renumbered) in TASKS.md

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,7 @@
 # config/routes.yaml
 # Main routing configuration
 
-# Standard login route (Symfony 4 convention)
+# Standard login route (Symfony 6 convention)
 _login:
     path: /login
     controller: App\Controller\SecurityController::login
@@ -11,9 +11,9 @@ login_check:
     path: /login_check
     methods: POST
 
-# Logout route (Symfony 4 convention)
+# Logout route (Symfony 6 convention)
 _logout:
     path: /logout
     methods: GET
 
-# Routes are provided via Doctrine annotations (@Route) in controllers on Symfony 4.4
+# Routes are primarily defined via PHP attributes (#[Route]) in controllers on Symfony 6.4
