--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
       "symfony/flex": true
     }
   },
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "App\\": "src/"
@@ -36,53 +37,53 @@
     "ext-pcre": "*",
     "ext-pdo": "*",
     "ext-reflection": "*",
-    "doctrine/annotations": "^1.14",
-    "doctrine/doctrine-bundle": "^2.0",
-    "doctrine/doctrine-migrations-bundle": "^3.0",
+    "doctrine/annotations": "^2.0",
+    "doctrine/doctrine-bundle": "^2.15",
+    "doctrine/doctrine-migrations-bundle": "^3.4",
     "doctrine/orm": "^2.20",
-    "doctrine/persistence": "^3.2",
-    "guzzlehttp/guzzle": "^7.3",
-    "guzzlehttp/oauth-subscriber": "^0.8",
+    "doctrine/persistence": "^3.4",
+    "guzzlehttp/guzzle": "^7.9",
+    "guzzlehttp/oauth-subscriber": "^0.8.1",
     "laminas/laminas-ldap": "^2.19",
     "phpoffice/phpspreadsheet": "^1.4",
-    "sentry/sentry-symfony": "^4.2",
+    "sentry/sentry-symfony": "^5.3",
     "symfony/asset": "^6.4",
     "symfony/console": "^6.4",
     "symfony/dotenv": "^6.4",
-    "symfony/flex": "^1.19",
+    "symfony/flex": "^2.8",
     "symfony/form": "^6.4",
     "symfony/framework-bundle": "^6.4",
     "symfony/mailer": "^6.4",
-    "symfony/monolog-bundle": "^3.1.0",
+    "symfony/monolog-bundle": "^3.10",
     "symfony/security-bundle": "^6.4",
     "symfony/translation": "^6.4",
     "symfony/twig-bundle": "^6.4",
     "symfony/validator": "^6.4",
     "symfony/yaml": "^6.4",
-    "twig/twig": "<3.9"
+    "twig/twig": "^3.21"
   },
   "require-dev": {
     "brianium/paratest": "*",
+    "dealerdirect/phpcodesniffer-composer-installer": "^1.1",
     "dms/phpunit-arraysubset-asserts": "^0.5.0",
-    "php-cs-fixer/shim": "^3.75",
-    "slevomat/coding-standard": "^8.15",
-    "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-    "phpstan/extension-installer": "^1.3",
-    "phpstan/phpstan": "^1.12",
-    "phpstan/phpstan-doctrine": "^1.3",
-    "phpstan/phpstan-symfony": "^1.3",
+    "php-cs-fixer/shim": "^3.86",
+    "phpstan/extension-installer": "^1.4",
+    "phpstan/phpstan": "^2.1",
+    "phpstan/phpstan-doctrine": "^2.0",
+    "phpstan/phpstan-symfony": "^2.0",
     "phpunit/phpunit": "^9.6",
     "psalm/plugin-symfony": "^5.2",
-    "rector/rector": "^1.2",
-    "squizlabs/php_codesniffer": "^3.7",
+    "rector/rector": "^2.1",
+    "slevomat/coding-standard": "^8.20",
+    "squizlabs/php_codesniffer": "^3.13",
     "symfony/browser-kit": "^6.4",
     "symfony/css-selector": "^6.4",
     "symfony/debug-bundle": "^6.4",
-    "symfony/maker-bundle": "^1.39",
-    "symfony/phpunit-bridge": "^7.2",
+    "symfony/maker-bundle": "^1.64",
+    "symfony/phpunit-bridge": "^7.3",
     "symfony/web-profiler-bundle": "^6.4",
-    "symfony/webpack-encore-bundle": "^1.0",
-    "vimeo/psalm": "^5.24"
+    "symfony/webpack-encore-bundle": "^2.3",
+    "vimeo/psalm": "^6.5"
   },
   "scripts": {
     "auto-scripts": {
