chore(deprecations): use Contracts TranslatorInterface and disable Sentry tracing in tests
- Switch translator alias to Symfony\Contracts\Translation\TranslatorInterface
- Add config/packages/test/sentry.yaml to turn off tracing/integrations in tests

--- a/config/packages/test/sentry.yaml
+++ b/config/packages/test/sentry.yaml
@@ -1,4 +1,12 @@
 sentry:
+    tracing:
+        enabled: false
+    messenger:
+        enabled: false
+    register_error_listener: false
+    options:
+        enabled_integrations: []
+sentry:
     dsn: null
 
 
