--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/12.3/phpunit.xsd"
     bootstrap="tests/bootstrap.php"
     colors="true"
-    convertErrorsToExceptions="true"
-    convertNoticesToExceptions="true"
-    convertWarningsToExceptions="true"
     stopOnFailure="false"
     executionOrder="depends,defects"
-    forceCoversAnnotation="false"
-    beStrictAboutCoversAnnotation="false"
     beStrictAboutOutputDuringTests="true"
     beStrictAboutTodoAnnotatedTests="true"
-    beStrictAboutChangesToGlobalState="true"
+    beStrictAboutChangesToGlobalState="false"
+    cacheDirectory=".phpunit.cache"
     verbose="true"
-    >
-    <coverage processUncoveredFiles="true">
+>
+    <coverage/>
+    <source>
         <include>
             <directory suffix=".php">src</directory>
         </include>
@@ -24,10 +21,7 @@
             <directory>src/Migrations</directory>
             <directory>src/DataFixtures</directory>
         </exclude>
-        <report>
-            <text outputFile="php://stdout" showUncoveredFiles="true" showOnlySummary="false"/>
-        </report>
-    </coverage>
+    </source>
     <testsuites>
         <testsuite name="unit">
             <directory>tests</directory>
