--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,8 +6,8 @@
     colors="true"
     stopOnFailure="false"
     executionOrder="depends,defects"
-    beStrictAboutOutputDuringTests="true"
-    beStrictAboutTodoAnnotatedTests="true"
+    beStrictAboutOutputDuringTests="false"
+    beStrictAboutTodoAnnotatedTests="false"
     beStrictAboutChangesToGlobalState="false"
     cacheDirectory=".phpunit.cache"
     verbose="true"
