--- a/composer.json
+++ b/composer.json
@@ -102,7 +102,7 @@
     "test:unit": "APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=unit",
     "test:controller": "APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=controller",
     "test:parallel": "APP_ENV=test paratest --processes=$(nproc) --testsuite=unit",
-    "test:fast": "APP_ENV=test php -d memory_limit=512M bin/phpunit --do-not-cache-result",
+    "test:fast": "APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=unit --do-not-cache-result && APP_ENV=test php -d memory_limit=512M bin/phpunit --testsuite=controller --do-not-cache-result",
     "test:coverage": "APP_ENV=test php -d memory_limit=512M bin/phpunit --coverage-html=var/coverage",
     "test:coverage-text": "APP_ENV=test php -d memory_limit=512M bin/phpunit --coverage-text",
     "security-check": "echo 'Running security check with Local PHP Security Checker'; curl -o security-checker.phar -s https://github.com/fabpot/local-php-security-checker/releases/download/v2.0.6/local-php-security-checker_2.0.6_linux_amd64 && chmod +x security-checker.phar && ./security-checker.phar && rm security-checker.phar",
