build: remove composer.lock prior to Doctrine refresh

--- a/composer.json
+++ b/composer.json
@@ -37,10 +37,10 @@
     "ext-pcre": "*",
     "ext-pdo": "*",
     "ext-reflection": "*",
-    "doctrine/doctrine-bundle": "^2.12 || ^2.15",
+    "doctrine/doctrine-bundle": "^2.15",
     "doctrine/doctrine-migrations-bundle": "^3.4",
     "doctrine/orm": "^3.5",
-    "doctrine/persistence": "^3.3",
+    "doctrine/persistence": "^4.0",
     "guzzlehttp/guzzle": "^7.9",
     "guzzlehttp/oauth-subscriber": "^0.8.1",
     "laminas/laminas-ldap": "^2.19",
