ignore phpunit cache

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ phpstan.neon
 ###> symfony/phpunit-bridge ###
 .phpunit
 .phpunit.result.cache
+.phpunit.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
