test(settings): resolve current user via BaseController::getUserId; test config: ensure routes loaded in test env

--- a/config/packages/test/security.yaml
+++ b/config/packages/test/security.yaml
@@ -5,3 +5,9 @@ security:
             security: false
             remember_me: false
 
+framework:
+    router:
+        resource: '%kernel.project_dir%/config/routes.yaml'
+
+# Ensure logout route is available in tests (route exists in routes.yaml). No further changes needed.
+
