--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -14,6 +14,7 @@ login_check:
 # Logout route (Symfony 6 convention)
 _logout:
     path: /logout
+    controller: App\Controller\SecurityController::logout
     methods: GET
 
 # Routes are primarily defined via PHP attributes (#[Route]) in controllers on Symfony 6.4
