test(ci): clean phpunit.xml for 12.x (drop unsupported verbose/beStrictAboutTodoAnnotatedTests)

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,10 +7,9 @@
     stopOnFailure="false"
     executionOrder="depends,defects"
     beStrictAboutOutputDuringTests="false"
-    beStrictAboutTodoAnnotatedTests="false"
     beStrictAboutChangesToGlobalState="false"
     cacheDirectory=".phpunit.cache"
-    verbose="true"
+    <!-- Removed unsupported attributes for PHPUnit 12.x schema -->
 >
     <coverage/>
     <source>
