build(frontend): upgrade Encore to 5.x, add webpack-dev-server v5, bump all dev deps; fix sass-loader to ^16; verify dev build
refactor(core): replace legacy helpers with services (JiraOAuthApiService, TimeCalculationService); update factory and tests; remove helper shims

docs: remove obsolete PLANNING.md and PROJECT-GOAL.md

chore: tidy .dockerignore; remove generated build/logs/clover.xml

tests: fix SubticketSyncServiceTest and Jira helper tests to target service

--- a/.dockerignore
+++ b/.dockerignore
@@ -10,11 +10,14 @@
 /.env.local
 /.env.local.php
 /.env.*.local
-/config/ldap_ou_team_mapping.yml
-/var
-/public/build/*
-core
+/npm-debug.log*
+/coverage
+/public/bundles
+/public/uploads
 /sql/unittest/*
 /tests
+/config/ldap_ou_team_mapping.yml
+core
 /bin/*
 !/bin/console
+.chunkhound*
