--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-    "devDependencies": {
-        "@babel/core": "^7.25.0",
-        "@babel/preset-env": "^7.25.0",
-        "@hotwired/stimulus": "^3.2.2",
-        "@symfony/stimulus-bridge": "^3.2.3",
-        "@symfony/webpack-encore": "^4.7.0",
-        "core-js": "^3.37.1",
-        "file-loader": "^6.2.0",
-        "regenerator-runtime": "^0.14.1",
-        "sass": "^1.77.8",
-        "sass-embedded": "^1.77.8",
-        "sass-loader": "^14.2.1",
-        "webpack": "^5.92.0",
-        "webpack-cli": "^5.1.4",
-        "webpack-notifier": "^1.15.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    }
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@hotwired/stimulus": "^3.2.2",
+    "@symfony/stimulus-bridge": "^4.0.1",
+    "@symfony/webpack-encore": "^5.2.0",
+    "core-js": "^3.38.1",
+    "file-loader": "^6.2.0",
+    "regenerator-runtime": "^0.14.1",
+    "sass": "^1.79.4",
+    "sass-embedded": "^1.79.4",
+    "sass-loader": "^16.0.1",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-notifier": "^1.15.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
+  }
 }
