chore(deps): require symfony/serializer-pack to enable request mapping

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,9 @@
     "guzzlehttp/guzzle": "^7.9",
     "guzzlehttp/oauth-subscriber": "^0.8.1",
     "laminas/laminas-ldap": "^2.19",
+    "phpdocumentor/reflection-docblock": "^5.6",
     "phpoffice/phpspreadsheet": "^1.4",
+    "phpstan/phpdoc-parser": "^2.2",
     "sentry/sentry-symfony": "^5.3",
     "symfony/asset": "^7.3",
     "symfony/console": "^7.3",
@@ -54,7 +56,10 @@
     "symfony/framework-bundle": "^7.3",
     "symfony/mailer": "^7.3",
     "symfony/monolog-bundle": "^3.10",
+    "symfony/property-access": "7.3.*",
+    "symfony/property-info": "7.3.*",
     "symfony/security-bundle": "^7.3",
+    "symfony/serializer": "7.3.*",
     "symfony/translation": "^7.3",
     "symfony/twig-bundle": "^7.3",
     "symfony/validator": "^7.3",
