dev: fix db_unittest healthcheck to use CMD-SHELL for proper env expansion

--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -43,7 +43,7 @@ services:
             - ./sql/unittest/002_testdata.sql:/docker-entrypoint-initdb.d/002_testdata.sql
         restart: always
         healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "root", "-p$MYSQL_ROOT_PASSWORD"]
+            test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p$$MYSQL_ROOT_PASSWORD"]
             interval: 5s
             timeout: 3s
             retries: 20
