refactor(admin): use Symfony ObjectMapper in save actions; add DTO mappings; add validator services for uniqueness; tidy repository types; fix Psalm; update TASKS.md

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
     "symfony/framework-bundle": "^7.3",
     "symfony/mailer": "^7.3",
     "symfony/monolog-bundle": "^3.10",
+    "symfony/object-mapper": "^7.3",
     "symfony/property-access": "7.3.*",
     "symfony/property-info": "7.3.*",
     "symfony/security-bundle": "^7.3",
