feat(admin): enable MapRequestPayload auto-validation; return 422 for DTO validation errors while preserving 406 for domain rules; install symfony/object-mapper; document breaking change; adjust test to expect 422; keep DTO validator constraints and mapper usage; add Twig lint script/CI earlier

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,10 @@ jobs:
         run: |
           docker compose -f compose.yml -f compose.dev.yml run --rm app composer cs-check
 
+      - name: Lint Twig templates
+        run: |
+          docker compose -f compose.yml -f compose.dev.yml run --rm app composer twig:lint
+
       - name: Run tests (PHPUnit)
         env:
           APP_ENV: test
