--- a/composer.json
+++ b/composer.json
@@ -112,7 +112,8 @@
     "test:coverage": "APP_ENV=test php -d memory_limit=512M bin/phpunit --coverage-html=var/coverage",
     "test:coverage-text": "APP_ENV=test php -d memory_limit=512M bin/phpunit --coverage-text",
     "security-check": "echo 'Running security check with Local PHP Security Checker'; curl -o security-checker.phar -s https://github.com/fabpot/local-php-security-checker/releases/download/v2.0.6/local-php-security-checker_2.0.6_linux_amd64 && chmod +x security-checker.phar && ./security-checker.phar && rm security-checker.phar",
-    "check:all": "phpstan analyze && psalm && phpcs",
+    "twig:lint": "php bin/console lint:twig --show-deprecations",
+    "check:all": "phpstan analyze && psalm && phpcs && php bin/console lint:twig --show-deprecations",
     "test:all": "APP_ENV=test php -d memory_limit=512M bin/phpunit && APP_ENV=test php -d memory_limit=512M bin/phpunit --coverage-html=var/coverage",
     "fix:all": "psalm --alter --issues=all && php-cs-fixer fix src && rector process src"
   },
